--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ certifi==2016.2.28
 cycler==0.10.0
 future==0.15.2
 lxml==3.6.0
-matplotlib==1.5.1
+#matplotlib==1.5.1
 numpy==1.11.1
 Pillow==3.3.0
 pyparsing==2.1.5
